# smec_online_tool

./: .gitignore  CMakeLists.txt  README.md
first_lesson/: CMakeLists.txt
first_lesson/src/: goodbye.c  helloworld.c  main.c  simple_program.c
first_lesson/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Test_goodbye.c  Test_helloworld.c  Test_simple_program.c  cmake_install.cmake
src/: B.c  SampleProjectMain.c  simple_program.c
test/: ATest.c  BTest.c  Test_helloworld.c  Test_simple_program.c
